fix(ChoiceGroup): fixed input style on IOS
issue -  #803

--- a/src/components/ChoiceGroup/ChoiceGroup.css
+++ b/src/components/ChoiceGroup/ChoiceGroup.css
@@ -109,6 +109,7 @@
     position: absolute;
     -webkit-appearance: none;
     appearance: none;
+    opacity: 0;
   }
 
   &-Label:last-child {
